--- a/PAlgo/.gitignore
+++ b/PAlgo/.gitignore
@@ -1,36 +1,3 @@
-##### java
-# Compiled class file
-*.class
-
-# Log file
-*.log
-
-# BlueJ files
-*.ctxt
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
-# *.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
-
-# idea file
-#.idea/
-# out file
-/JAlgo/out/
-# mac file
-.DS_Store
-
-##### py
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -85,7 +52,7 @@ coverage.xml
 *.pot
 
 # Django stuff:
-#*.log
+*.log
 local_settings.py
 db.sqlite3
 
@@ -136,3 +103,7 @@ venv.bak/
 # mypy
 .mypy_cache/
 
+# idea
+#.idea
+# mac file
+.DS_Store
